# GapAnalysis

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  ana.py  db.py  docker-compose.yml  example_perfect_chat.py  google_reasoning_interface.py  home_james.py  home_jeremy.py  interview_interface.py  james_linkedin.py  jeremy_linkedin.py  main.py  models.py  open_ai_tool_utils.py  phish_interface.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.override.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 2025_03_09_1749-add_bait-cc50e0d17edf.py  2025_03_09_1817-add_chat_history-f720d85e48bb.py
ui/: .gitignore  README.md  package-lock.json  package.json
ui/src/: App.tsx
